--- a/package.json
+++ b/package.json
@@ -7,18 +7,35 @@
   "license": "MIT",
   "type": "module",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
+    "@jest/globals": "^27.5.1",
+    "bcrypt": "^5.0.1",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "express-list-routes": "^1.1.3",
     "jsonwebtoken": "^8.5.1",
-    "nodemon": "^2.0.15",
     "uuid": "^8.3.2",
     "yup": "^0.32.11"
   },
   "scripts": {
-    "dev": "nodemon --experimental-specifier-resolution=node src/server.js"
+    "dev": "tsnd --files --respawn --rs --ignore-watch node_modules src/server.ts --clear --watch ./**"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
+    "@types/node": "^17.0.23",
+    "@types/uuid": "^8.3.4",
+    "@typescript-eslint/eslint-plugin": "^5.16.0",
+    "@typescript-eslint/parser": "^5.16.0",
+    "eslint": "^8.12.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-prettier": "^4.0.0",
+    "jest": "^27.5.1",
+    "nodemon": "^2.0.15",
+    "prettier": "^2.6.1",
     "ts-node": "^10.7.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.6.3"
